--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,12 @@ dist: bionic
 
 # build each debug level, to make sure they all work
 env:
-  - DEBUG=0
-  - DEBUG=1
-  - DEBUG=2
+  - DEBUG=0 TARGET=Arduino
+  - DEBUG=1 TARGET=Arduino
+  - DEBUG=2 TARGET=Arduino
+  - DEBUG=0 TARGET=DebugBoard09
+  - DEBUG=1 TARGET=DebugBoard09
+  - DEBUG=2 TARGET=DebugBoard09
 
 before_install:
   - sudo apt-get update
@@ -13,4 +16,4 @@ before_install:
 
 script:
   - cd firmware
-  - make DEBUG=$DEBUG
+  - make DEBUG=$DEBUG TARGET=$TARGET
